<resources>
    <string name="app_name">NUS UHC Queue For Me</string>

    <string name="main_clinic_status">The UHC is</string>
    <string name="main_clinic_status_closed">CLOSED</string>
    <string name="main_clinic_status_open">OPEN</string>
    <string name="main_clinic_icon_content_desc">Clinic icon</string>
    <string name="main_est_wait">Waiting Time (mins)</string>
    <string name="main_start_reg">Not Feeling Well</string>

    <string name="reg_title">Registration</string>
    <string name="reg_overseas">Overseas last 14 days</string>
    <string name="reg_fever">Fever</string>
    <string name="reg_cough">Cough</string>
    <string name="reg_sign_in">NUS Sign-In</string>
    <string name="reg_toast_overseas">Please state the country(-ies) below</string>

    <string name="wait_time">60</string>
    <string name="wait_your_turn">Your turn in</string>
    <string name="wait_minutes">minutes</string>
    <string name="wait_reached">I\'ve reached</string>
    <string name="wait_toast_notification">Set a reminder</string>
    <string name="wait_toast_come_early">Reach 15 min before your turn</string>
    <string name="wait_toast_timer">Set a reminder</string>
    <string name="wait_reminder_remind_me_xx">Remind me ___ minutes before my consult</string>
    <string name="wait_reminder_set_before">Will remind you</string>
    <string name="wait_reminder_set_after">mins before consult</string>
    <string name="wait_reminder_confirm">OK</string>
    <string name="wait_reminder_alarm_msg">UHC consultation</string>

    <string name="qr_scan_button">Scan QR Code</string>
    <string name="qr_location_of_code">Where is it?</string>
    <string name="qr_instructions">Please click the button below on arrival at UHC</string>
    <string name="qr_fail_toast">Please try again</string>

    <string name="room_room">Room</string>
    <string name="room_write_doctor_notes">Write your doctor\'s notes here</string>
    <string name="room_done">I\'m done \:\)</string>
    <string name="web_view_toast">Please wait while we send your registration to UHC</string>

</resources>
