<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RoomNumberAndNotes">

    <EditText
        android:id="@+id/EditText1"
        android:layout_width="410dp"
        android:layout_height="359dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:hint="@string/room_write_doctor_notes"
        android:inputType="text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_roomNum"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/room_roomNum"
        android:layout_width="300dp"
        android:layout_height="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/room_room"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="69dp"
        android:layout_height="62dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/EditText1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <Button
        android:id="@+id/button2"
        android:layout_width="191dp"
        android:layout_height="53dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_hover"
        android:onClick="completed"
        android:text="@string/room_done"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText1"
        app:layout_constraintVertical_bias="0.222"
        tools:text="@android:color/background_light" />

</android.support.constraint.ConstraintLayout>