<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary2"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/fullscreen_content_controls"
        android:layout_width="465dp"
        android:layout_height="567dp"
        app:srcCompat="@android:color/transparent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/main_img_clinic"
            android:layout_width="117dp"
            android:layout_height="118dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/clinic_icon" />

        <TextView
            android:id="@+id/main_clinic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="72dp"
            android:text="@string/main_clinic_status"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/main_img_clinic"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_clinicStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_clinic_status_closed"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/main_clinic"
            app:layout_constraintStart_toStartOf="@+id/main_clinic"
            app:layout_constraintTop_toBottomOf="@+id/main_clinic" />

        <TextView
            android:id="@+id/main_estWaitTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:text="60"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="120sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/main_estWaitText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_img_clinic"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/main_estWaitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/main_est_wait"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/main_estWaitTime"
            app:layout_constraintStart_toStartOf="@+id/main_estWaitTime"
            app:layout_constraintTop_toBottomOf="@+id/main_estWaitTime" />

        <ImageButton
            android:id="@+id/main_start_reg_button"
            android:layout_width="182dp"
            android:layout_height="65dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:onClick="startRegistration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_estWaitText"
            app:srcCompat="@drawable/ic_launcher_background" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>